--- a/src/lib/translations/de/home.json
+++ b/src/lib/translations/de/home.json
@@ -1,4 +1,3 @@
 {
-	"title": "Willkommen zu SvelteKit",
-	"text": "Visit <a href=\"{{link}}\">kit.svelte.dev</a> to read the documentation"
+	"title": "Willkommen zu SvelteKit"
 }
