--- a/src/lib/translations/en/home.json
+++ b/src/lib/translations/en/home.json
@@ -1,4 +1,3 @@
 {
-	"title": "Welcome to SvelteKit",
-	"text": "Visit <a href=\"{{link}}\">kit.svelte.dev</a> to read the documentation"
+	"title": "Homepage Title"
 }
